[package]
name = "voxov"
version = "0.1.0"
authors = ["Celio Grand <celiogrand@outlook.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.68"
description = "A Pay-as-You-Go Backend-as-a-Service server"
#TODO documentation
readme = "README.md"
#TODO homepage
repository = "https://github.com/vorgv/voxov/"
keywords = ["payg", "baas"]
categories = ["web-programming"]

[features]
console = ["dep:console-subscriber"]

[workspace]
members = ["vctl", "vcli"]

[workspace.dependencies]
tokio = { version = "1.34.0", features = ["full"] }
bytes = "1.5"
reqwest = "0.11.22"
clap = { version = "4.3.24", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }

[dependencies]
# Workspace
vcli = { path = 'vcli' }

# Tokio
tokio = { workspace = true }
tokio-util = "0.7.10"
tokio-stream = "0.1.14"
bytes = { workspace = true }

# Hyper
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
http = "1.0.0"
http-body-util = "0.1.0"

# Database
scylla = "0.13"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
rust-s3 = { version = "0.34.0-rc4", features = ["with-tokio"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Tool
blake3 = "1.5.0"
chrono = { workspace = true }
rand = "0.8.5"
hex = "0.4"

# Macros
strum_macros = "0.25"
serde = { workspace = true }
serde_json = "1.0.108"

# Test
reqwest = { workspace = true }
sysinfo = "0.29.10"
console-subscriber = { version = "0.2.0", optional = true }
