[package]
name = "voxov"
version = "0.1.0"
authors = ["Celio Grand <celiogrand@outlook.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.85"
description = "A Pay-as-You-Go Backend-as-a-Service server"
#TODO documentation
readme = "README.md"
#TODO homepage
repository = "https://github.com/vorgv/voxov/"
keywords = ["payg", "baas"]
categories = ["web-programming"]

[features]
console = ["dep:console-subscriber"]

[workspace]
members = ["vctl", "vcli"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
reqwest = "0.12"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dependencies]
# Workspace
vcli = { path = 'vcli' }

# Tokio
tokio = { workspace = true }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = { workspace = true }

# Hyper
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"

# Database
scylla = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }
rust-s3 = { version = "0.35", features = ["with-tokio"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Tool
blake3 = "1"
chrono = { workspace = true }
rand = "0.9"
hex = "0.4"

# Macros
strum_macros = "0.26"
serde = { workspace = true }
serde_json = "1"

# Test
reqwest = { workspace = true }
sysinfo = "0.33"
console-subscriber = { version = "0.4", optional = true }
