[package]
name = "vcli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true}
toml = { version = "0.8.8", features = ["parse", "display"] }
